--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "@nestjs/platform-express": "^10.0.0",
       "@nestjs/typeorm": "^10.0.2",
       "bcryptjs": "^2.4.3",
+      "passport-jwt": "^4.0.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.8.1",
@@ -48,8 +49,10 @@
       "@types/bcryptjs": "^2.4.6",
       "@types/express": "^4.17.17",
       "@types/node": "^18.19.34",
+      "@types/passport-jwt": "^4.0.1",
       "@types/ws": "^8.5.10",
       "@vitest/coverage-v8": "^1.6.0",
+      "dotenv": "^16.4.5",
       "eslint": "^8.57.0",
       "prettier": "^3.0.0",
       "source-map-support": "^0.5.21",
