--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
    "author": "",
    "private": true,
    "license": "UNLICENSED",
+   "engines": {
+      "node": ">=18"
+   },
    "scripts": {
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
       "start": "ts-node src/index.ts",
       "start:dev": "nest start --watch",
       "start:debug": "nest start --debug --watch",
-      "start:prod": "node dist/main",
+      "start:prod": "node dist/src/main",
       "migration:create": "npm run typeorm -- migration:create ./src/db/migrations/$npm_config_name",
-      "migration:run": "npm run typeorm migration:run -- -d ./src/db/typeORM.migration-config.ts",
-      "migration:revert": "npm run typeorm migration:revert -- -d ./src/db/typeORM.migration-config.ts",
+      "migration:run": "typeorm-ts-node-commonjs migration:run -d ./src/db/typeORM.migration-config.ts",
+      "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ./src/db/typeORM.migration-config.ts",
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
       "typeorm": "typeorm-ts-node-commonjs",
       "test": "vitest run",
@@ -24,19 +27,26 @@
       "test:e2e": "vitest run --config ./vitest.config.e2e.ts"
    },
    "dependencies": {
-      "@nestjs/common": "^10.0.0",
+      "@nestjs/common": "^10.3.9",
       "@nestjs/config": "^3.2.2",
-      "@nestjs/core": "^10.0.0",
+      "@nestjs/core": "^10.3.9",
       "@nestjs/jwt": "^10.2.0",
+      "@nestjs/mongoose": "^10.0.6",
       "@nestjs/passport": "^10.0.3",
-      "@nestjs/platform-express": "^10.0.0",
+      "@nestjs/platform-express": "^10.3.9",
+      "@nestjs/swagger": "^7.3.1",
       "@nestjs/typeorm": "^10.0.2",
       "bcryptjs": "^2.4.3",
+      "class-validator": "^0.14.1",
+      "mongoose": "^8.4.1",
       "passport-jwt": "^4.0.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rxjs": "^7.8.1",
+      "swagger-ui-express": "^5.0.1",
       "typeorm": "0.3.20",
+      "winston": "^3.13.0",
+      "winston-mongodb": "^5.1.1",
       "zod": "^3.23.8",
       "zod-validation-error": "^3.3.0"
    },
@@ -45,19 +55,23 @@
       "@nestjs/schematics": "^10.0.0",
       "@nestjs/testing": "^10.0.0",
       "@rocketseat/eslint-config": "^2.2.2",
-      "@swc/core": "^1.5.25",
+      "@swc/core": "^1.5.28",
       "@types/bcryptjs": "^2.4.6",
       "@types/express": "^4.17.17",
       "@types/node": "^18.19.34",
       "@types/passport-jwt": "^4.0.1",
+      "@types/pg": "^8.11.6",
+      "@types/supertest": "^6.0.2",
       "@types/ws": "^8.5.10",
       "@vitest/coverage-v8": "^1.6.0",
       "dotenv": "^16.4.5",
       "eslint": "^8.57.0",
       "prettier": "^3.0.0",
       "source-map-support": "^0.5.21",
+      "supertest": "^7.0.0",
       "ts-node": "10.9.1",
       "tsconfig-paths": "^4.2.0",
+      "tsup": "^8.1.0",
       "typescript": "^5.4.5",
       "unplugin-swc": "^1.4.5",
       "vite-tsconfig-paths": "^4.3.2",
